WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199263
[GTK][WPE] Fix build non-unified builds after
r246856
https://bugs.webkit.org/show_bug.cgi?id=199263
Summary
[GTK][WPE] Fix build non-unified builds after r246856
Adrian Perez
Reported
2019-06-27 02:43:07 PDT
Build error: ../Source/WebKit/UIProcess/API/C/WKMessageListener.cpp:33:12: error: use of undeclared identifier 'toAPI' return toAPI(API::MessageListener::APIType); ^ ../Source/WebKit/UIProcess/API/C/WKMessageListener.cpp:38:5: error: use of undeclared identifier 'toImpl' toImpl(listenerRef)->sendReply(toImpl(value)); ^ ../Source/WebKit/UIProcess/API/C/WKMessageListener.cpp:38:36: error: use of undeclared identifier 'toImpl' toImpl(listenerRef)->sendReply(toImpl(value)); ^
Attachments
Patch
(1.21 KB, patch)
2019-06-27 02:46 PDT
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2019-06-27 02:46:37 PDT
Created
attachment 373014
[details]
Patch
WebKit Commit Bot
Comment 2
2019-06-27 06:45:38 PDT
Comment on
attachment 373014
[details]
Patch Clearing flags on attachment: 373014 Committed
r246880
: <
https://trac.webkit.org/changeset/246880
>
WebKit Commit Bot
Comment 3
2019-06-27 06:45:40 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-06-27 06:48:16 PDT
<
rdar://problem/52255846
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug