[GTK][WPE] Fix build non-unified builds after r246856 https://bugs.webkit.org/show_bug.cgi?id=199263

Reviewed by Michael Catanzaro.

* UIProcess/API/C/WKMessageListener.cpp: Added missing inclusion of WKAPICast.h and usage of WebKit namespace.


Canonical link: https://commits.webkit.org/213223@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246880 268f45cc-cd09-0410-ab3c-d52691b4dbfc